# pangenes-review

./: README.md
real_genomes/: run.sh
real_genomes/datasets/: download.sh  gbk2dbfiles.py  gbk2files.sh  gbk2ig.py  naming_convertion.py  run_examples.sh
real_genomes/pipeline/: get_curves.py  get_softwares.sh  start.py
real_genomes/pipeline/modules/: micropan_module.py  panX_module.py  pandelos_module.py  panget_module.py  panoct_module.py  panseq_module.py  pipelines.py  resource_control.py  roary_module.py  runners.sh
singleton-less/generate_datasets/: create_dataset.py  create_datasets.sh  cvtree.sh  install.sh  requirements.sh
singleton-less/generate_datasets/alf/lib/: AllSi  BipartiteSquared  BootstrapTree  CMakeLists.txt  CalculateScore  CallAnalysis  CharMappings  Cholesky  CircularTour  Clique  CodonCountsLib  CodonIndices  CodonMatrix  ComputeTSP  ConcatStrings  ConsensusAlignment  ContinuedFraction  ConvertSP  Counter  CreateGraph.drw  CrossReference  DBTools  DNATools  Descriptions  DetectRepeats  DrawPackage  DynProgBoth_PartOrd_D  DynProgGap  EvolutionaryOptimization  FigPlot  FileConv  Fold  GapH  GapTree  GenomeSummary  GimpFigureInstructions.fig  Globals  Graph  GraphvizWrapper  Greedy  (+79 more)
singleton-less/generate_datasets/alf/lib/CodonData/: ortho.counts
singleton-less/generate_datasets/alf/lib/Optimizations/: Optimizations
singleton-less/generate_datasets/alf/lib/Server/: AllAllDB  MassDynSearch  MultAlign  ParExec2.machines  PepNuclSearch  PredictGenes  cbrg.server  mail_handler
singleton-less/generate_datasets/alf/lib/Wrappers/: DistTreeWrappers  InputOutput  LSTreeWrappers  MSAFilter  MSAProbabilistic  ParsTreeWrappers
singleton-less/generate_datasets/alf/lib/simulator/: SE_DataOutput_tmp.drw  SE_NucleotideMatrix
singleton-less/generate_datasets/input/: mycoplasma.g-1.fasta
singleton-less/generated_datasets/: download.sh
singleton-less/pipeline/: get_softwares.sh  run.sh
sinlgeton-enriched/generate_datasets/: db2clus.py  db2genomes.py  db2gff3.py  gbk2ig.py  generate.py  generate.sh  get_leafs.py  get_roots.py
sinlgeton-enriched/generated_datasets/: download.sh
sinlgeton-enriched/pipeline/: myco_analysis.py  run_analysis.sh  start.py
(+1304 files in other folders)
