FIND_PROGRAM(EXECUTABLE_MAPLE
   NAMES maple maple5
   PATHS /bin /usr/bin /usr/local/bin
   DOC "path to maple executable")

################################################################################
#                 _                        _   _
#   ___ __ _  ___| |__   ___    ___  _ __ | |_(_) ___  _ __  ___
#  / __/ _` |/ __| '_ \ / _ \  / _ \| '_ \| __| |/ _ \| '_ \/ __|
# | (_| (_| | (__| | | |  __/ | (_) | |_) | |_| | (_) | | | \__ \
#  \___\__,_|\___|_| |_|\___|  \___/| .__/ \__|_|\___/|_| |_|___/
#                                   |_|
################################################################################

SET(DATA_DIRECTORY ${CMAKE_INSTALL_PREFIX}/share/darwin CACHE STRING "directory for shared databases")

################################################################################
#                                       ___     _                       _
#  ___  ___  _   _ _ __ ___ ___  ___   ( _ )   | |_ __ _ _ __ __ _  ___| |_ ___
# / __|/ _ \| | | | '__/ __/ _ \/ __|  / _ \/\ | __/ _` | '__/ _` |/ _ \ __/ __|
# \__ \ (_) | |_| | | | (_|  __/\__ \ | (_>  < | || (_| | | | (_| |  __/ |_\__ \
# |___/\___/ \__,_|_|  \___\___||___/  \___/\/  \__\__,_|_|  \__, |\___|\__|___/
#                                                            |___/
################################################################################

CONFIGURE_FILE(${CMAKE_CURRENT_SOURCE_DIR}/darwinit.in ${CMAKE_BINARY_DIR}/darwinit)

################################################################################
#  _           _        _ _       _   _
# (_)_ __  ___| |_ __ _| | | __ _| |_(_) ___  _ __
# | | '_ \/ __| __/ _` | | |/ _` | __| |/ _ \| '_ \
# | | | | \__ \ || (_| | | | (_| | |_| | (_) | | | |
# |_|_| |_|___/\__\__,_|_|_|\__,_|\__|_|\___/|_| |_|
#
################################################################################


IF(NOT HOME_DARWIN_MODE)
   INSTALL(DIRECTORY ./ DESTINATION share/darwin/lib)
   INSTALL(FILES ${CMAKE_BINARY_DIR}/darwinit DESTINATION share/darwin/lib)
ENDIF(NOT HOME_DARWIN_MODE)

